--- a/layout/partial/head.jade
+++ b/layout/partial/head.jade
@@ -2,15 +2,15 @@ meta(charset="utf-8")
 meta(name="X-UA-Compatible", content="IE=edge")
 
 title 
-    block site_title
-        = config.title
+  block site_title
+    = config.title
 block description
-    meta(name="description", content= config.description ? config.description : 'A Blog Powered By Hexo')
+  meta(name="description", content= config.description ? config.description : 'A Blog Powered By Hexo')
 
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="short icon", href=url_for(theme.favicon))
-link(rel="stylesheet", href=url_for("css/apollo.css"))
+link(rel="stylesheet", href=url_for("css/flex.css"))
 
 - var xml = config.url + '/atom.xml'
-    link(rel="search", type="application/opensearchdescription+xml", href=xml, title=config.title)
-    
+  link(rel="search", type="application/opensearchdescription+xml", href=xml, title=config.title)
+  
