--- a/source/scss/_partial/home-post-list.scss
+++ b/source/scss/_partial/home-post-list.scss
@@ -1,5 +1,5 @@
 .home.post-list {
-  margin: 2em 0;
+  margin: 0 0;
   .post-list-item {
     padding: 1em 0 2em;
     border-bottom: 1px solid #ddd;
