--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -29,12 +29,32 @@ mixin postList()
         - change = year !== itemYear;
         - year = change ? itemYear : year;
         if change 
-          h2.archive-year!= year
+          h2.archive-year!=year
         .post-item
           +postInfo(item)
           a.post-title-link(href= url_for(item.path))
             != item.title
     - })
+
+mixin archiveList()
+  ul.archive-list
+    - var year = 0;
+    - var years = {};
+    - var change = false;
+    - site.posts.each(function (item) {
+        - var itemYear = date(item.date, 'YYYY') - 0;
+        - change = year !== itemYear;
+        - year = change ? itemYear : year;
+        if change
+          - years[year] = 1;
+        else
+          - years[year]++;
+    - })
+    - for(item in years) {
+        li.archive-list-item!=item
+          span (#{years[item]})
+    - }
+
 
 //- Tags Page
 mixin tagList()
