--- a/layout/partial/sidebar.jade
+++ b/layout/partial/sidebar.jade
@@ -3,7 +3,18 @@ a.logo-link(href=url_for())
 a.author-link(href=url_for())
   != config.author.toUpperCase()
 div.side-line
-p.side-sign
-  != theme.sign
+h3 NAVIGATION
 div.side-nav
   include nav
+input.side-search(type="text", placeholder="Type and hit enter...")
+h4 FOLLOW ME
+ul.side-social
+  each value, key in theme.social
+    li.side-social-item
+      - var re = /^(http|https):\/\/*/gi;
+      - var tar = re.test(value) ? "_blank" : "_self"
+      a.side-social-link(href=value target=tar)
+        i(class='fa fa-#{key}')
+h4 ARCHIVES
+include ../mixins/post
++archiveList()
