--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -38,24 +38,29 @@ mixin postList()
 
 mixin archiveList()
   ul.archive-list
-    - var year = 0;
+    - var month = 0, year = 0;
     - var years = {};
     - var change = false;
     - site.posts.each(function (item) {
-        - var itemYear = date(item.date, 'YYYY') - 0;
-        - change = year !== itemYear;
-        - year = change ? itemYear : year;
+        - var itemMonth = date(item.date, 'MM') - 0;
+        - change = month !== itemMonth;
+        - month = change ? itemMonth : month;
         if change
-          - years[year] = 1;
+          - year = date(item.date, 'YYYY') - 0;
+          - years[year] = years[year]? years[year] : {};
+          - years[year][month] = 1;
         else
-          - years[year]++;
+          - year = date(item.date, 'YYYY') - 0;
+          - years[year][month]++;
     - })
-    - for(item in years) {
+    - for(y in years) {
+      - for(m in years[y]) {
         li.archive-list-item
-          a.archive-list-link(href='/archives/#{item}')!=item
-            span (#{years[item]})
+          - var timeLabel = y + '年' + m + '月'; 
+          a.archive-list-link(href='/archives/#{y}/0#{m}')!=timeLabel
+            span (#{years[y][m]})
+      - } 
     - }
-
 
 //- Tags Page
 mixin tagList()
