add Semantic-UI and modify sidebar

--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -5,7 +5,7 @@ html(lang=config.language)
   body
     .sidebar
       include sidebar
-    .content
+    .main
       .wrap
         section.container
           block container
