--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -1,7 +1,6 @@
-ul.nav.nav-list
-  each value, key in theme.menu
-    li.nav-list-item
-      - var re = /^(http|https):\/\/*/gi;
-      - var tar = re.test(value) ? "_blank" : "_self"
-      a.nav-list-link(href=value target=tar)
-        != key.toUpperCase()
+each value, key in theme.menu
+  - var re = /^(http|https):\/\/*/gi;
+  - var tar = re.test(value) ? "_blank" : "_self"
+  a.item(href=value target=tar)
+    != key.toUpperCase()
+    i(class='icon #{key}')
