--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -1,3 +1,6 @@
+//- Semantic
+script(src="/js/semantic.min.js")
+
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
 
