--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -4,13 +4,12 @@ section.container {
 
 @media screen and (min-width: 700px) {
   .sidebar {
-    width: 250px;
+    width: 210px;
     height: 100%;
-    border-right: 1px solid rgba(204, 204, 204, 0.5);
     position: fixed;
   }
-  .content {
-    margin-left: 260px;
+  .main {
+    margin-left: 220px;
   }
   .wrap {
     width: 90%;
@@ -25,7 +24,7 @@ section.container {
   .sidebar {
     width: 100%;
   }
-  .content {
+  .main {
     width: 100%;
   }
   .wrap {
