--- a/source/scss/_partial/sidebar.scss
+++ b/source/scss/_partial/sidebar.scss
@@ -1,4 +1,8 @@
 .sidebar {
+  .h100 {
+    height: 100px;
+  }
+
   .h50 {
     height: 50px;
   }
@@ -19,7 +23,7 @@
   }
 
   .social-outer {
-    margin-top: 100px;
+    margin-top: 10px;
     text-align: center;
   }
 
