--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -1,3 +1,6 @@
+//- jQuery
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
+
 //- Semantic
 script(src="/js/semantic.min.js")
 
