--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -13,50 +13,38 @@
 }
 
 .post-content {
-  h2, h3, h4, h5, h6 {
-    position: relative;
-    margin: 1em 0;
-    &:before {
-      content: "#";
-      color: #42b983;
-      position: absolute;
-      left: -0.7em;
-      top: -4px;
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-  }
-  h4, h5, h6 {
-    &:before {
-      content: "";
-    }
-  }
+  margin: 10px auto;
 
   h2, h3 {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   h4, h5, h6 {
-    font-size: 18px;
+    font-size: 16px;
   }
+
   a {
     color: #42b983;
     word-break: break-all;
   }
+
   blockquote {
     margin: 2em 0;
     padding-left: 20px;
     border-left: 4px solid #42b983;
   }
+
   img {
     display: block;
     max-width: 100%;
     margin: 1em auto;
   }
+
   & > table,
   & > figure.highlight {
     box-shadow: 0 1px 2px rgba(0,0,0,0.125);
   }
+
   .tip {
     position: relative;
     margin: 2em 0;
@@ -69,6 +57,7 @@
       display: none;
     }
   }
+  
   .tip:before {
     position: absolute;
     top: 14px;
@@ -109,15 +98,16 @@ code,
 pre {
   font-size: 0.8em;
   background-color: #f8f8f8;
-  font-family: 'Roboto Mono', Monaco, courier, monospace;
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
 .highlight {
   position: relative;
   margin: 1em 0;
-  border-radius: 2px;
+  border-radius: 4px;
   line-height: 1.1em;
   background-color: #f8f8f8;
+  border: 1px solid rgba(34,36,38,.22);
   overflow-x: auto;
   table, tr, td {
     width: 100%;
