--- a/layout/partial/copyright.jade
+++ b/layout/partial/copyright.jade
@@ -4,4 +4,4 @@
   - var currentDate = new Date();
   - var year = currentDate.getFullYear();
   - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
-  p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and theme by #[a(href=flexURL, target="_blank") flex].
+  p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and theme by #[a(href=flexURL, target="_blank") casual]
