--- a/layout/post.jade
+++ b/layout/post.jade
@@ -1,7 +1,7 @@
 extends partial/layout
 
 block site_title
-  != page.title + " · " + config.title
+  != page.title + " | " + config.title
 
 block description
   - var desc = page.desc || page.title + ' - ' + config.author;
