--- a/source/scss/_partial/copyright.scss
+++ b/source/scss/_partial/copyright.scss
@@ -1,8 +1,7 @@
 footer {
   padding-bottom: 1px;
   .copyright {
-    margin: 4em 0;
-    border-top: 1px solid #ddd;
+    margin: 6em 0 2em 0;
     text-align: center;
     p, a {
       color: #aaa;
