update archive and tag page

--- a/layout/about.jade
+++ b/layout/about.jade
@@ -1,7 +1,7 @@
 extends partial/layout
 
 block site_title
-  != page.title + " · " + config.title
+  != page.title + " | " + config.title
 
 block container
   include mixins/post
