--- a/source/scss/casual.scss
+++ b/source/scss/casual.scss
@@ -10,6 +10,7 @@
 @import "_partial/mq";
 @import "_partial/copyright";
 @import "_partial/sidebar";
+@import "_partial/tag";
 
 @font-face {
   font-family: 'sourcesanspro';
