--- a/layout/archive.jade
+++ b/layout/archive.jade
@@ -1,5 +1,8 @@
 extends partial/layout
 
+block site_title
+  != "ARCHIVE | " + config.title
+
 block container
   include mixins/post
   +postList()
