--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -36,19 +36,20 @@ mixin posts()
 //- Archive Page
 mixin postList()
   .archive
-    - var year = 0;
-    - var change = false;
-    - page.posts.each(function (item) {
-        - var itemYear = date(item.date, 'YYYY') - 0;
-        - change = year !== itemYear;
-        - year = change ? itemYear : year;
-        if change 
-          h2.archive-year!=year
-        .post-item
-          +postInfo(item)
-          a.post-title-link(href= url_for(item.path))
-            != item.title
-    - })
+    .ui.animated.list
+      - var year = 0;
+      - var change = false;
+      - page.posts.each(function (item) {
+          - var itemYear = date(item.date, 'YYYY') - 0;
+          - change = year !== itemYear;
+          - year = change ? itemYear : year;
+          if change 
+            h2.archive-year!=year
+          .post-item.item
+            +postInfo(item)
+            a.post-title-link(href= url_for(item.path))
+              != item.title
+      - })
 
 mixin archiveList()
   ul.archive-list
@@ -79,7 +80,7 @@ mixin archiveList()
 //- Tags Page
 mixin tagList()
   .tag
-    != tagcloud({min_font: 20, max_font: 30, amount: 100, orderby: 'count', color: true, start_color: 'gray', end_color: 'black',})
+    != tagcloud({min_font: 14, max_font: 14, amount: 100, orderby: 'count', color: false})
 
 //- Post Page
 mixin post(item)
