--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -4,6 +4,9 @@ script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 //- Semantic
 script(src="/js/semantic.min.js")
 
+//- casual.js
+script(src="/js/casual.js")
+
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
 
