--- a/layout/partial/sidebar.jade
+++ b/layout/partial/sidebar.jade
@@ -17,6 +17,10 @@
 
   .h50
 
+.h50.mq
+  a.ui.teal.big.label
+    i.content.icon
+
 .author-info
   img.author-photo.ui.tiny.circular.image(src=theme.logo)
 
