add avatar and favicon

--- a/layout/partial/sidebar.jade
+++ b/layout/partial/sidebar.jade
@@ -22,7 +22,7 @@
     i.content.icon
 
 .author-info
-  img.author-photo.ui.tiny.circular.image(src=theme.logo)
+  img.author-photo.ui.tiny.circular.image(src=theme.avatar)
 
   h4.ui.aligned.icon.header
     .content
