--- a/layout/partial/sidebar.jade
+++ b/layout/partial/sidebar.jade
@@ -12,7 +12,7 @@
 
   .item
     .ui.inverted.transparent.icon.input
-      input(type="text" placeholder="Search...")
+      input(type="text" class="st-default-search-input" placeholder="Search...")
       i.search.icon
 
   .h50
