--- a/layout/partial/copyright.jade
+++ b/layout/partial/copyright.jade
@@ -1,7 +1,7 @@
 .copyright
   - var hexoURL = "https://hexo.io/";
-  - var flexURL = "https://github.com/littlewin-wang/hexo-theme-flex";
+  - var casualURL = "https://github.com/littlewin-wang/hexo-theme-casual";
   - var currentDate = new Date();
   - var year = currentDate.getFullYear();
   - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
-  p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and theme by #[a(href=flexURL, target="_blank") casual]
+  p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and theme by #[a(href=casualURL, target="_blank") casual]
