Add duoshuo share

--- a/layout/partial/comment.jade
+++ b/layout/partial/comment.jade
@@ -1,4 +1,18 @@
 if theme.duoshuo
+  .ds-share(data-thread-key=page.path, data-title=page.title, data-url=page.permalink)
+    .ds-share-inline
+      ul.ds-share-icons-16
+        li(data-toggle="ds-share-icons-more")
+          a.ds-more(href="javascript:void(0);") 分享到：
+        li
+          a.ds-weibo(href="javascript:void(0);" data-service="weibo") 微博
+        li
+          a.ds-qqt(href="javascript:void(0);" data-service="qqt") 腾讯微博
+        li
+          a.ds-wechat(href="javascript:void(0);" data-service="wechat") 微信
+      .ds-share-icons-more
+
+
   .ds-thread(data-thread-key=page.path, data-title=page.title, data-url=page.permalink, data-author-key='1')
   script.
     var duoshuoQuery = {short_name:"#{theme.duoshuo}"};
