--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -4,6 +4,9 @@ script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 //- jQuery.scrollex.js
 script(src="/js/jquery.scrollex.js")
 
+//- jQuery.goup.js
+script(src="/js/jquery.goup.min.js")
+
 //- Semantic
 script(src="/js/semantic.min.js")
 
@@ -12,6 +15,10 @@ script(src="/js/casual.js")
 
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
+
+//- Back up to top
+script
+  | $(document).ready(function(){$.goup({trigger:100,bottomOffset:100,locationOffset: 0,title:'',titleAsText:true});});
 
 //- swiftype search
 - var ss = theme.swift_search
