change img style of post

--- a/layout/partial/comment.jade
+++ b/layout/partial/comment.jade
@@ -3,15 +3,13 @@ if theme.duoshuo
     .ds-share-inline
       ul.ds-share-icons-16
         li(data-toggle="ds-share-icons-more")
-          a.ds-more(href="javascript:void(0);") 分享到：
+          span.ds-more 分享到：
         li
           a.ds-weibo(href="javascript:void(0);" data-service="weibo") 微博
         li
           a.ds-qqt(href="javascript:void(0);" data-service="qqt") 腾讯微博
         li
           a.ds-wechat(href="javascript:void(0);" data-service="wechat") 微信
-      .ds-share-icons-more
-
 
   .ds-thread(data-thread-key=page.path, data-title=page.title, data-url=page.permalink, data-author-key='1')
   script.
