--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -1,5 +1,6 @@
 .post {
   padding-top: 1em;
+  width: 90%;
 }
 
 .post-info {
@@ -41,7 +42,6 @@
   img {
     display: block;
     max-width: 100%;
-    margin: 1.5em;
   }
 
   & > table,
