--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -3,8 +3,8 @@ html(lang=config.language)
   head
     include head
   body
-    .sidebar
-      include sidebar
+    .header
+      block header
     .main
       .wrap
         section.container
