--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -1,6 +1,8 @@
-each value, key in theme.menu
-  - var re = /^(http|https):\/\/*/gi;
-  - var tar = re.test(value) ? "_blank" : "_self"
-  a.item(href=value target=tar)
-    != key.toUpperCase()
-    i(class='icon #{key}')
+.nav
+  each value, key in theme.menu
+    - var re = /^(http|https):\/\/*/gi;
+    - var tar = re.test(value) ? "_blank" : "_self"
+    .nav-item
+      a(href=value target=tar)
+        != key.toUpperCase()
+        i(class='icon #{key}')
