--- a/source/scss/_partial/normalize.scss
+++ b/source/scss/_partial/normalize.scss
@@ -202,8 +202,8 @@ svg:not(:root) {
  */
 
 figure {
-  margin: 1em 40px;
-}
+  margin: 0;
+} 
 
 /**
  * Address differences between Firefox and other browsers.
