--- a/layout/index.jade
+++ b/layout/index.jade
@@ -3,9 +3,12 @@ extends partial/layout
 block header
   include partial/header
 
-block container
+block content
   include mixins/post
   +posts()
+
+block sidebar
+  include partial/sidebar
   
 block pagination
   include mixins/paginator
