--- a/layout/partial/social.jade
+++ b/layout/partial/social.jade
@@ -4,5 +4,5 @@
       - var re = /^(http|https):\/\/*/gi;
       - var tar = re.test(value) ? "_blank" : "_self"
       li.social-link
-        a.(href=value target=tar)
-          i(class='icon-social-#{key}')
+        a(href=value target=tar class='link-#{key}')
+          i(class='icon icon-#{key}')
