--- a/layout/post.jade
+++ b/layout/post.jade
@@ -7,7 +7,7 @@ block description
   - var desc = page.desc || page.title + ' - ' + config.author;
   meta(name="description", content=desc)
 
-block container
+block content
   include mixins/post
   +post(page)
 
