--- a/source/scss/_partial/sidebar.scss
+++ b/source/scss/_partial/sidebar.scss
@@ -1,117 +1,31 @@
 .sidebar {
-  .h100 {
-    height: 100px;
-  }
-
-  .h50 {
-    height: 50px;
-  }
-
-  a.title-link {
-    color: white;
-  }
-
-  a.title-link:hover {
-    color: #ccc;
-  }
-
-  .author-info {
-    margin-top: -50px;
-  }
-
-  .author-photo {
-    display: block;
-    margin:0 auto;
-  }
-
-  .author-photo:hover {
-    -webkit-animation: swing 1s ease;
-    animation: swing 1s ease;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-  }
-
-  .author-desc {
-    width: 80%;
-    margin: 0 auto;
-    text-align:center;
-  }
-
-  .social-outer {
-    margin-top: 10px;
-    text-align: center;
-  }
-
-  .social-inner {
-    display: inline-block;
-    margin: 0 auto;
-  }
-}
-
-@-webkit-keyframes swing
-{
-  15%
-  {
-    -webkit-transform: translateX(5px);
-    transform: translateX(5px);
-  }
-  30%
-  {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-  } 
-  50%
-  {
-    -webkit-transform: translateX(3px);
-    transform: translateX(3px);
-  }
-  65%
-  {
-    -webkit-transform: translateX(-3px);
-    transform: translateX(-3px);
-  }
-  80%
-  {
-    -webkit-transform: translateX(2px);
-    transform: translateX(2px);
-  }
-  100%
-  {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@keyframes swing
-{
-  15%
-  {
-    -webkit-transform: translateX(5px);
-    transform: translateX(5px);
-  }
-  30%
-  {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-  }
-  50%
-  {
-    -webkit-transform: translateX(3px);
-    transform: translateX(3px);
-  }
-  65%
-  {
-    -webkit-transform: translateX(-3px);
-    transform: translateX(-3px);
-  }
-  80%
-  {
-    -webkit-transform: translateX(2px);
-    transform: translateX(2px);
-  }
-  100%
-  {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+  .social-links {
+    ul {
+      list-style: none;
+    }
+    .social-link {
+      display: inline-block;
+      a {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin: 0 8px;
+        border-radius: 50%;
+        text-align: center;
+        .icon {
+          line-height: 30px;
+          color: #fff;
+        }
+      }
+      .link-github {
+        background-color: #888;
+      }
+      .link-twitter {
+        background-color: #00aced;
+      }
+      .link-weibo {
+        background-color: #dd4b39;
+      }
+    }
   }
 }
