--- a/layout/about.jade
+++ b/layout/about.jade
@@ -3,6 +3,6 @@ extends partial/layout
 block site_title
   != page.title + " | " + config.title
 
-block container
+block content
   include mixins/post
   +post(page)
