--- a/layout/tags.jade
+++ b/layout/tags.jade
@@ -3,6 +3,6 @@ extends partial/layout
 block site_title
   != "TAGS | " + config.title
 
-block container
+block content
   include mixins/post
   +tagList()
