--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -1,80 +1,27 @@
-section.container {
-  margin: 0 10px;
+.main {
+  margin: 30px 0;
+  overflow: hidden;
 }
 
-@media screen and (min-width: 1060px) {
-  .sidebar {
-    width: 252px;
-    height: 100%;
-    position: fixed;
-
-    .h50.mq {
-      display: none;
-    }
-
-    .ui.vertical.inverted.menu {
-      display: block;
-    }
-  }
-  .main {
-    margin-left: 260px;
-  }
-  .wrap {
-    width: 90%;
-    max-width: 960px;
-    margin: 0 auto;
-  }
+.container {
+  max-width: 700px;
+  padding: 0 20px;
+  margin: auto;
+  transition: all 0.5s ease-in-out 0s;
 }
 
-@media screen and (max-width: 1060px) {
-  .sidebar {
-    width: 100%;
-
-    .ui.vertical.inverted.menu {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      opacity: 0.85;
+@media screen and (min-width: 1024px) {
+  .container {
+    max-width: 980px;
+    padding: 0;
+    .content {
+      float: left;
+      width: 65.3062%;
+      margin: 0;
     }
-
-    .a.ui.teal.big.label {
-      margin: 5px;
+    .sidebar {
+      float: right;
+      width: 30.6123%;
     }
-  }
-  .main {
-    width: 100%;
-  }
-  .wrap {
-    width: 100%;
-    margin: 0 auto;
-  }
-  header {
-    a.logo-link,
-    ul.nav.nav-list {
-      float: none;
-      display: block;
-      text-align: center;
-    }
-    li.nav-list-item {
-      padding: 10px 10px;
-    }
-  }
-  section.container,
-  .home.post-list,
-  .archive {
-    margin-top: 0;
-  }
-  .archive .post-item {
-    padding-left: 20px;
-  }
-  .post-content {
-    h2, h3, h4, h5, h6 {
-      max-width: 300px;
-      left: 15px;
-    }
-  }
-  .ds-thread,
-  #disqus_thread {
-    margin: 2em 10px;
   }
 }
