--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -14,7 +14,7 @@ body {
   font-size: 15px;
   line-height: 1.6;
   background-color: #fff;
-  font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 ul.nav,
@@ -26,6 +26,7 @@ ul.post-list {
 
 ul {
   margin: 1rem 0;
+  padding: 0;
 }
 
 a, a:active {
