增加scroll to top组件

--- a/layout/partial/layout.jade
+++ b/layout/partial/layout.jade
@@ -14,4 +14,6 @@ html(lang=config.language)
     footer
       block pagination
       block copyright
+    a.scroll-up
+      span.icon.icon-up
     include scripts
