--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -1,3 +1,4 @@
+//- Duosuo
 script.
   var duoshuoQuery = {short_name:"#{theme.duoshuo}"};
   (function() {
@@ -12,21 +13,11 @@ script.
 //- jQuery
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 
-//- jQuery.goup.js
-script(src="/js/jquery.goup.min.js")
-
-//- Semantic
-script(src="/js/semantic.min.js")
-
 //- casual.js
 script(src="/js/casual.js")
 
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
-
-//- Back up to top
-script
-  | $(document).ready(function(){$.goup({trigger:100,bottomOffset:100,locationOffset:5,title:'',titleAsText:true});});
 
 //- swiftype search
 - var ss = theme.swift_search
