--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -1,4 +1,4 @@
-.nav
+.container
   each value, key in theme.menu
     - var re = /^(http|https):\/\/*/gi;
     - var tar = re.test(value) ? "_blank" : "_self"
