--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -14,6 +14,7 @@
   .container {
     max-width: 980px;
     padding: 0;
+    overflow: hidden;
     .content {
       float: left;
       width: 65.3062%;
