完成index页面的响应式设计

--- a/layout/partial/header.jade
+++ b/layout/partial/header.jade
@@ -5,4 +5,5 @@ header.site-header
       a(href=url_for() data-text=config.title) 
         != config.title
   .site-nav
+    span.button-toggle
     include nav
