--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -33,6 +33,7 @@
 
 .post-header {
   margin-bottom: 5px;
+  margin-left: 240px;
 }
 
 .post-date {
@@ -74,6 +75,7 @@
 }
 
 .post-excerpt {
+  margin-left: 240px;
   p {
     font-size: 14px;
     margin: 0 auto;
